--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "nodemailer": "^6.9.8",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -38,6 +37,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@tailwindcss/typography": "^0.5.19",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -53,6 +53,7 @@
     "multer": "^2.0.2",
     "next": "14.2.16",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
